--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JDBC Registration Form</title>
 </head>
 <body>
     <form action="./session1.jsp"method="post">
@@ -29,4 +29,5 @@ else{
     
 </if>
 </body>
+
 </html>
