--- a/project pes.html
+++ b/project pes.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PES University</title>
+    <title>Document</title>
 </head>
 <body>
-  
   <style>
     /* Top menu */
     ul {
@@ -527,22 +526,4 @@ _tpt.R.fonts.		domFonts = {"Merriweather":{"normal":[700],"italic":[]},"Roboto":
     © 2025 PES University | Powered by NiTH
   </div>
 
-  <!-- Inline CSS for Hover Effects & Responsive -->
-  <style>
-    .footer-link {
-      color: white;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-    .footer-link:hover {
-      color: #ffcc00;
-    }
-
-    @media(max-width:800px){
-      footer div[style*="display:flex"] {
-        flex-direction: column;
-        gap: 20px;
-      }
-    }
-  </style>
 </footer>
